--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: url("../images/IMG_0545.jpg") repeat scroll center center / cover;
+  background: url("../images/IMG_1245.JPG") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
 }
@@ -248,7 +248,7 @@ nav ul li a {
 
 #header .header-content {
   height: 100vh;
-  text-align: left;
+  text-align: center;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -256,11 +256,11 @@ nav ul li a {
 }
 
 .header-content h1 {
-  font-size: 40px;
+  font-size: 70px;
   font-weight: 700;
   margin-bottom: 10px;
   text-transform: uppercase;
-  color: black;
+  color: white;
 }
 
 .header-content p {
@@ -269,18 +269,18 @@ nav ul li a {
   margin-top: 0;
   margin-bottom: 30px;
   text-transform: capitalize;
-  color: black;
+  color: white;
   font-weight: 500;
 }
 
 .header-content .list-social li {
-  float: left;
-  margin-right: 20px;
+  float: center;
+  margin-right: 35px;
 }
 
 .header-content .list-social li i {
-  color: black;
-  font-size: 15px;
+  color: white;
+  font-size: 30px;
 }
 
 /*-----------------------------------------------------------------------------------*/
